--- a/alpine-graphviz/Dockerfile
+++ b/alpine-graphviz/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.13.3
 
 RUN apk update && apk upgrade \
-  && apk --no-cache add fontconfig \
+  && apk --no-cache add graphviz fontconfig \
   && cd /home \
   && wget https://moji.or.jp/wp-content/ipafont/IPAfont/ipag00303.zip \
   && unzip ipag00303.zip \
